完成响应式设计融合：1. 修复移动端路由注册问题 2. 修复API调用路径 3. 优化登录页面设计 4. 添加响应式测试脚本

--- a/public/client-login.html
+++ b/public/client-login.html
@@ -348,7 +348,7 @@
             }
             
             // 调用后端登录API
-            fetch('/api/users/login', {
+            fetch(`${window.envConfig.apiBaseUrl}/api/users/login`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
