修复移动端页面路由路径问题，将相对路径改为绝对路径

--- a/public/mobile-login.html
+++ b/public/mobile-login.html
@@ -798,8 +798,8 @@
                     // 保存到本地存储
                     mobileStorage.set('userData', userData);
                     
-                    // 登录成功，跳转到响应式主页
-                    window.location.href = './responsive-index.html';
+                    // 登录成功，跳转到移动端首页
+                    window.location.href = '/mobile';
                 }
             })
             .catch(error => {
