初始化项目结构和配置文件

--- a/public/mobile/profile.html
+++ b/public/mobile/profile.html
@@ -620,19 +620,19 @@
                 <h1>聚财众发</h1>
             </div>
             <div class="sidebar-menu">
-                <a href="./index.html" class="menu-item">
+                <a href="/mobile" class="menu-item">
                     <i class="fas fa-home"></i>
                     <span>首页</span>
                 </a>
-                <a href="./market.html" class="menu-item">
+                <a href="/mobile/market" class="menu-item">
                     <i class="fas fa-chart-bar"></i>
                     <span>行情</span>
                 </a>
-                <a href="./trade.html" class="menu-item">
+                <a href="/mobile/trade" class="menu-item">
                     <i class="fas fa-exchange-alt"></i>
                     <span>交易</span>
                 </a>
-                <a href="./profile.html" class="menu-item active">
+                <a href="/mobile/profile" class="menu-item active">
                     <i class="fas fa-user"></i>
                     <span>我的</span>
                 </a>
