--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -543,34 +543,27 @@
                 <h1>聚财众发</h1>
             </div>
             <div class="sidebar-menu">
-                <a href="./index.html" class="menu-item active">
+                <a href="/mobile" class="menu-item active">
                     <i class="fas fa-home"></i>
                     <span>首页</span>
                 </a>
-                <a href="./market.html" class="menu-item">
+                <a href="/mobile/market" class="menu-item">
                     <i class="fas fa-chart-bar"></i>
                     <span>行情</span>
                 </a>
-                <a href="./trade.html" class="menu-item">
+                <a href="/mobile/contract-market" class="menu-item">
+                    <i class="fas fa-file-contract"></i>
+                    <span>合约行情</span>
+                </a>
+                <a href="/mobile/option-market" class="menu-item">
+                    <i class="fas fa-bolt"></i>
+                    <span>期权行情</span>
+                </a>
+                <a href="/mobile/trade" class="menu-item">
                     <i class="fas fa-exchange-alt"></i>
                     <span>交易</span>
                 </a>
-                <a href="./profile.html" class="menu-item">
-                    <i class="fas fa-user"></i>
-                    <span>我的</span>
-                </a>
-                <a href="#" class="menu-item">
-                    <i class="fas fa-wallet"></i>
-                    <span>资金管理</span>
-                </a>
-                <a href="#" class="menu-item">
-                    <i class="fas fa-history"></i>
-                    <span>交易记录</span>
-                </a>
-                <a href="#" class="menu-item">
-                    <i class="fas fa-cog"></i>
-                    <span>设置</span>
-                </a>
+
             </div>
             <div class="sidebar-footer">
                 <div class="user-info-small">
@@ -655,7 +648,7 @@
                 <div class="card">
                     <div class="card-header">
                         <h2><i class="fas fa-list"></i> 最近持仓</h2>
-                        <a href="./market.html">查看全部</a>
+                        <a href="/mobile/market">查看全部</a>
                     </div>
                     <div class="position-list">
                         <div class="position-item">
@@ -687,13 +680,21 @@
     
     <!-- 底部导航栏 -->
     <nav class="tabbar">
-        <a href="/mobile" class="tab-item active">
+        <a href="/mobile" class="tab-item">
             <i class="fas fa-home"></i>
             <span>首页</span>
         </a>
         <a href="/mobile/market" class="tab-item">
             <i class="fas fa-chart-bar"></i>
             <span>行情</span>
+        </a>
+        <a href="/mobile/contract-market" class="tab-item">
+            <i class="fas fa-file-contract"></i>
+            <span>合约</span>
+        </a>
+        <a href="/mobile/option-market" class="tab-item">
+            <i class="fas fa-bolt"></i>
+            <span>期权</span>
         </a>
         <a href="/mobile/trade" class="tab-item">
             <i class="fas fa-exchange-alt"></i>
