--- a/public/responsive-index.html
+++ b/public/responsive-index.html
@@ -518,19 +518,19 @@
             <h1>聚财众发</h1>
         </div>
         <div class="sidebar-menu">
-            <a href="./responsive-index.html" class="menu-item active">
+            <a href="/" class="menu-item active">
                 <i class="fas fa-home"></i>
                 <span>首页</span>
             </a>
-            <a href="./market.html" class="menu-item">
+            <a href="/mobile/market" class="menu-item">
                 <i class="fas fa-chart-bar"></i>
                 <span>行情</span>
             </a>
-            <a href="./trade.html" class="menu-item">
+            <a href="/mobile/trade" class="menu-item">
                 <i class="fas fa-exchange-alt"></i>
                 <span>交易</span>
             </a>
-            <a href="./profile.html" class="menu-item">
+            <a href="/mobile/profile" class="menu-item">
                 <i class="fas fa-user"></i>
                 <span>我的</span>
             </a>
@@ -664,19 +664,19 @@
     
     <!-- 底部导航栏 -->
     <nav class="tabbar">
-        <a href="./responsive-index.html" class="tab-item active">
+        <a href="/" class="tab-item active">
             <i class="fas fa-home"></i>
             <span>首页</span>
         </a>
-        <a href="./market.html" class="tab-item">
+        <a href="/mobile/market" class="tab-item">
             <i class="fas fa-chart-bar"></i>
             <span>行情</span>
         </a>
-        <a href="./trade.html" class="tab-item">
+        <a href="/mobile/trade" class="tab-item">
             <i class="fas fa-exchange-alt"></i>
             <span>交易</span>
         </a>
-        <a href="./profile.html" class="tab-item">
+        <a href="/mobile/profile" class="tab-item">
             <i class="fas fa-user"></i>
             <span>我的</span>
         </a>
