--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>聚财中法虚拟交易平台</title>
+    <title>聚财众发虚拟交易平台</title>
 </head>
 <body>
     <div id="root"></div>
